Updated README and cleaned up code a bit.

--- a/format_data/imu_data_collection.ipynb
+++ b/format_data/imu_data_collection.ipynb
@@ -150,7 +150,7 @@
     "def convert_imu_to_df(imu_list: list, save_name=None) -> pd.DataFrame:\n",
     "    df = pd.DataFrame(imu_list, columns=[\"topic\", \"time\", \"gyro.x\", \"gyro.y\", \"gyro.z\", \"acceleration.x\", \"acceleration.y\", \"acceleration.z\"])\n",
     "    if type(save_name) is str:\n",
-    "        file_path = \"data\"\n",
+    "        file_path = \"../data\"\n",
     "        if not os.path.exists(file_path):\n",
     "            os.makedirs(file_path)\n",
     "        file_path = os.path.join(file_path, save_name+\".csv\")\n",
