--- a/format_data/imu_data_sort.ipynb
+++ b/format_data/imu_data_sort.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "335f1bf4",
    "metadata": {},
    "outputs": [
@@ -131,13 +131,13 @@
     }
    ],
    "source": [
-    "df_is_imu = pd.read_csv(\"data/is_imu_data.csv\")\n",
+    "df_is_imu = pd.read_csv(\"../data/is_imu_data.csv\")\n",
     "df_is_imu.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b4e53624",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "df_lidar_imu = pd.read_csv(\"data/lidar_imu_data.csv\")\n",
+    "df_lidar_imu = pd.read_csv(\"../data/lidar_imu_data.csv\")\n",
     "df_lidar_imu.head()"
    ]
   },
@@ -65041,13 +65041,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5b15a456",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_df_to_csv(df: pd.DataFrame, save_name: str):\n",
-    "    file_path = \"data\"\n",
+    "    file_path = \"../data\"\n",
     "    if not os.path.exists(file_path):\n",
     "        os.makedirs(file_path)\n",
     "    file_path = os.path.join(file_path, save_name+\".csv\")\n",
